assets/css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* APPLICATION CODE WRITTEN  */

@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
html,
body {
  width: 100%;
  margin: 0px auto;
  padding: 0px;
}
.nav-menu {
  position: fixed;
  background-color: white;
  box-shadow: rgb(0, 0, 0) 0px 0px 5px inset;
  top: 0;
  left: 0;
  height: 100vh;
  overflow: hidden;
  z-index: 999;
  color: black;
  transition: 1s;
  width: 0px;
  padding: 20px 0;
}

.nav-menu #close {
  position: absolute;
  right: 20px;
}

.active-nav {
  width: 430px;
}

.nav-menu .link-contain {
  margin-top: 30px;
  min-width: 430px;
}
.nav-menu a {
  display: block;
  text-decoration: none;
  text-align: center;
  padding: 5px 10px;
  font-size: 30px;
}
.nav-menu img {
  width: 100px;
  height: 100px;
  display: block;
  margin: 0 auto 20px auto;
  position: static;
}
#nav-social > a {
  display: inline-flex;
  padding: 0 5px;
  width: 40px;
}
#nav-social .social-icons {
  height: 40px;
  width: 40px;
}
.nav-contact {
  text-align: center;
  margin-top: 250px;
}
.nav-contact > h2 {
  font-size: 30px;
  margin-bottom: 10px;
}
.nav-contact > ul {
  width: 140px;
  margin: auto;
}
.nav-contact li {
  padding: 5px 0;
}
header {
  background-image: url("../images/code_background.png");
  background-size: cover;
  height: 750px;
  font-family: "Playfair Display", serif;
  color: white;
}
.row {
  width: 100%;
}
.inline {
  display: inline-flex;
}
/* nav  */
nav {
  height: 50px;
  padding: 20px;
}
nav img {
  position: absolute;
  right: 100px;
}
/* add when links are placed in **** */

/* nav > ul {
  display: inline-flex;
  position: absolute;
  right: 100px;
  padding: 20px;
} */
/* nav li {
  padding: 5px 10px;
  position: relative;
  right: 0;
} */

/* end add when links are placed in ***  */

/* header area  */

header .sect-right > h1 {
  color: white;
  font-size: 93px;
  line-height: 1.25;
  text-align: left;
}
.block {
  display: block;
}
.sect-left,
.sect-right {
  width: 50%;
}

header .row-flex {
  display: flex;
  flex-direction: row;
}
header .sect-right {
  width: 45%;
  order: 2;
}
header .sect-left {
  width: 55%;
  order: 1;
}

.container {
  width: 80%;
  margin: auto;
}

.title {
  display: block;
  font-size: 30px;
  margin: auto;
  padding: 30px 0;
  text-align: center;
  width: 100%;
}

/* header left side  */
.dynamic-code {
  color: #00a03e;
  font-family: "Fira Code", monospace;
  font-size: 20px;
  height: 300px;
  margin-left: 40px;
  padding: 20px 0;
  position: relative;
  top: 140px;
  width: 90%;
}
.skill-container {
  display: inline-flex;
  font-size: 40px;
  left: 100px;
  position: relative;
  top: 300px;
}
#dynamic-skill-list {
  padding-left: 10px;
}

/* image style  */
.rounded-circle {
  border: 2px solid white;
  border-radius: 50%;
}
header #profile-img {
  height: 50px;
  position: absolute;
  width: 50px;
}

#profile-img {
  height: 250px;
  position: relative;
  width: 250px;
  margin: auto;
  display: block;
  top: 30px;
}

/* about section  */

.sect-txt-left,
.sect-txt-right,
.sect-txt {
  padding: 20px 55px;
  font-size: 20px;
  width: 50%;
  box-sizing: border-box;
}

/* porfolio slider  */
.outter-track {
  width: 100%;
  overflow-x: hidden;
  background-color: green;
}

.inner-track {
  background-color: blue;
  width: 2200px;
  height: 100px;
  margin: 50px 0;
  padding: 20px 0;
  display: inline-flex;
  position: relative;
  left: 0px;
}

.slide-box {
  height: 50px;
  width: 294px;
  margin: 5px;
  background-color: red;
}
/* portfolio staggered section  */
#portfolio img {
  width: 80%;
  display: block;
}

#portfolio .sect-left img {
  float: right;
  padding-right: 30px;
}
#portfolio .sect-right img {
  float: left;
  padding-left: 30px;
}
#portfolio .row {
  margin: 20px auto;
}

#portfolio h2 {
  padding-bottom: 10px;
  font-size: 29px;
}
#portfolio h3 {
  font-size: 22px;
  padding-bottom: 10px;
}

#portfolio li,
#portfolio p {
  font-size: 18px;
}
#portfolio p {
  text-align: justify;
}
#portfolio ul {
  display: inline-flex;
  padding-bottom: 10px;
}
#portfolio li {
  padding: 5px 10px;
}
#portfolio .sect-right {
  padding: 20px 0 20px 45px;
}
#portfolio .sect-left {
  padding: 20px 20px 20px 0px;
}
#portfolio .sect-right p,
#portfolio .sect-left p {
  width: 450px;
  padding-bottom: 10px;
}

#portfolio .sect-left p {
  float: right;
}

.sect-txt-left {
  text-align: right;
}

.clearfix {
  clear: both;
}

@media (max-width: 768px) {
  header {
    height: 560px;
  }
  .nav-contact {
    margin-top: 200px;
  }
  .active-nav {
    width: 100%;
  }
  .active-nav-mobile {
    overflow-y: hidden;
  }
  .row-flex {
    flex-direction: column;
  }
  header .sect-right {
    width: 45%;
    order: 1;
  }
  header .sect-left {
    display: none;
  }
  header .sect-right > h1 {
    font-size: 65px;
    padding-left: 25px;
  }

  .sect-txt-left,
  .sect-txt-right,
  .sect-txt,
  .sect-left,
  .sect-right {
    width: 100%;
    padding: 0;
  }
  #profile-img {
    height: auto;
    width: 200px;
    top: 0px;
  }
  .sect-left {
    order: 2;
    text-align: justify;
  }
  .sect-right {
    order: 1;
    padding-bottom: 25px;
  }

  #portfolio h2,
  #portfolio h3 {
    text-align: center;
  }
  #portfolio .sect-right {
    padding: 0;
  }
  #portfolio .sect-left {
    padding-right: 0;
  }
  #portfolio .sect-right p,
  #portfolio .sect-left p {
    width: 100%;
  }
  #portfolio .sect-left {
    order: 1;
  }
  #portfolio .flip > .sect-left {
    order: 2;
    padding-bottom: 0;
  }

  #portfolio .sect-left img,
  #portfolio .sect-right img {
    float: none;
    padding: 0;
    margin: auto;
  }
}

